Draw Sharp brush stops on anchored during the stroke #99644

Closed
opened 2022-07-12 16:06:10 +02:00 by Tonatiuh de San Julián · 6 comments

System Information
Operating system: Linux-5.4.0-121-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 670MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.151

Blender Version
Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: a2d59b2dac
Worked: (newest version of Blender that worked as expected)

Short description of error
Draw Sharp brush stops working on anchored during the stroke only when the direction of the effect is set to subtract and in faces with normals that are not facing the camera.

Exact steps for others to reproduce the error
Open blender, then open a new sculpt file. Select the Draw Sharp brush and activate the anchored stroke method, start the effect in the side of the sphere and see that it stops working.
If you start the effect in the middle of the sphere the behavior is as expected.
If you change the direction of the effect to add, the behavior is as expected.

You can see the bug in this video:
vokoscreen-2022-07-12_15-54-27.mp4

**System Information** Operating system: Linux-5.4.0-121-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 670MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.151 **Blender Version** Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: `a2d59b2dac` Worked: (newest version of Blender that worked as expected) **Short description of error** Draw Sharp brush stops working on anchored during the stroke only when the direction of the effect is set to subtract and in faces with normals that are not facing the camera. **Exact steps for others to reproduce the error** Open blender, then open a new sculpt file. Select the Draw Sharp brush and activate the anchored stroke method, start the effect in the side of the sphere and see that it stops working. If you start the effect in the middle of the sphere the behavior is as expected. If you change the direction of the effect to add, the behavior is as expected. You can see the bug in this video: [vokoscreen-2022-07-12_15-54-27.mp4](https://archive.blender.org/developer/F13288845/vokoscreen-2022-07-12_15-54-27.mp4)

Added subscriber: @TonatiuhdeSanJulian

Added subscriber: @TonatiuhdeSanJulian
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this.

I can confirm this.

This issue was referenced by cd1e4ae448

This issue was referenced by cd1e4ae4483056157f238f56f19367ad98ae3f3d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-07-17 02:28:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99644
No description provided.